# cabal-file-inspector

./: .hlint.yaml  cabal.project  flake.nix
.github/workflows/: ci.yml
cabal-file-inspector/: cabal-file-inspector.cabal
cabal-file-inspector/exe/: Main.hs
cabal-file-inspector/exe-lib/Exe/: CabalFileSource.hs  Compiler.hs  ComponentSpecification.hs  Error.hs  Flags.hs  Input.hs  Text.hs
cabal-file-inspector/exe-lib/Exe/Command/: Dependencies.hs
cabal-file-inspector/lib/: CabalFile.hs  MonadicFlow.hs
cabal-file-inspector/lib/Cabal/: Optics.hs
cabal-file-inspector/lib/CabalFile/: CabalFile.hs  CabalOptic.hs  Component.hs  ComponentName.hs  ComponentType.hs  ComponentsByType.hs  DependencyName.hs  FlagName.hs  Package.hs  PackageName.hs  QualifiedComponentName.hs  Text.hs
cabal-file-inspector/test/: Main.hs
cabal-file-inspector/test-data/: minimal-with-executable.cabal  minimal-with-library.cabal  with-flags.cabal  with-internal-libraries.cabal
cabal-file-inspector/test/Spec/: CabalFile.hs
cabal-file-inspector/test/Spec/Command/: Dependencies.hs
cabal-file-inspector/test/Testing/: Optparse.hs
